--- a/html/qa.html
+++ b/html/qa.html
@@ -10,6 +10,8 @@
     <link rel="stylesheet" href="../css/nav.css"/>
     <link rel="stylesheet" href="../css/qa.css">
     <link rel="stylesheet" href="../css/footer.css"/>
+    <link rel="stylesheet" href="../css/styles.css">
+    <link rel="stylesheet" href="../css/media.css">
     <script src="../lib/jquery/jquery-2.2.4.min.js"></script>
     <script src="../lib/jquery.localize.js" type="text/javascript"></script>
     <script src="../lib/bootstrap/js/bootstrap.min.js"></script>
@@ -20,17 +22,27 @@
     setTitle("qa")
 </script>
 <body>
-    <div class="navWrap">
-        <div class="nav">
-            <div class="logo"><a href="../index.html"><img src="../images/logo_header_other@2x.png"/></a></div>
-            <ul class="navigation">
+<div class="navbar navbar-default">
+    <div class="container">
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#coll3">
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+            <a href="../index.html" class="navbar-brand">
+                <img src="../images/logo_header_other@2x.png"/>
+            </a>
+        </div>
+        <div class="collapse navbar-collapse" id="coll3">
+            <ul class="nav navbar-nav navbar-right">
                 <li><a target="_blank" href="../whitePaper/htc-whitePaper-zh.pdf" data-localize="nav.menu1">白皮书</a></li>
-                <li><a href="solution.html"  data-localize="nav.menu2">解决方案</a></li>
-                <li><a href="news.html"  data-localize="nav.menu3">新闻</a></li>
-                <li class="active"><a href="qa.html"  data-localize="nav.menu4">常见问题</a></li>
-                <li><a href="contractUs.html"  data-localize="nav.menu5">联系我们</a></li>
+                <li><a href="../html/solution.html"  data-localize="nav.menu2">解决方案</a></li>
+                <li><a href="../html/news.html"  data-localize="nav.menu3">新闻</a></li>
+                <li class="active"><a href="../html/qa.html"  data-localize="nav.menu4">常见问题</a></li>
+                <li><a href="../html/contractUs.html"  data-localize="nav.menu5">联系我们</a></li>
                 <li class="language">
-                    <img src="../images/icon_flag_china@2x.png"  data-localize="nav.icon_other"/><a href="#"  data-localize="nav.menu6">简体中文</a>
+                    <img src="../images/icon_flag_china@2x.png" data-localize="nav.icon_other"/><a href="#"  data-localize="nav.menu6">简体中文</a>
                     <ul>
                         <li class="zh"><img src="../images/icon_flag_china@2x.png"/><a>简体中文</a></li>
                         <li class="en"><img src="../images/icon_flag_eng@2x.png"/><a>English</a></li>
@@ -40,8 +52,9 @@
             </ul>
         </div>
     </div>
+</div>
     <div class="qaWrap">
-        <div class="qa">
+        <div class="qa container">
             <div class="title">
                 <h3 data-localize="qa.title">常见问题</h3>
                 <div class="sec-title" data-localize="qa.secTitle">Q&A</div>
@@ -67,24 +80,26 @@
 
 
     <div class="footer">
-        <div class="contact">
-            <div class="left">
-                <p data-localize="contact.phone">电话：+61 412 927 796</p>
-                <p data-localize="contact.email">邮箱：webmaster@jaz-intl.com</p>
-                <p data-localize="contact.adress">地址：9A/139 Minjungbal Drive Tweed Heads South NSW 2486 Australia</p>
-            </div>
-            <div class="right">
-                <p>
-                    <a target="_blank" href="https://github.com/HealthTrace" class="github"></a>
-                    <a class="telegram"></a>
-                    <a class="wechat"></a>
-                    <a class="twitter"></a>
-                    <a class="facebook"></a>
-                </p>
+        <div class="contact container">
+            <div class="row">
+                <div class="left col-sm-6 col-xs-12">
+                    <p data-localize="contact.phone">电话：+61 412 927 796</p>
+                    <p data-localize="contact.email">邮箱：webmaster@jaz-intl.com</p>
+                    <p data-localize="contact.adress">地址：9A/139 Minjungbal Drive Tweed Heads South NSW 2486 Australia</p>
+                </div>
+                <div class="right col-sm-6 col-xs-12">
+                    <p>
+                        <a target="_blank" href="https://github.com/HealthTrace" class="github"></a>
+                        <a class="telegram"></a>
+                        <a class="wechat"></a>
+                        <a class="twitter"></a>
+                        <a class="facebook"></a>
+                    </p>
+                </div>
             </div>
         </div>
         <div class="divide"></div>
-        <div class="copyright">
+        <div class="copyright container">
             <div class="logoBottom"><img src="../images/logo_bottom@2x.png"></div>
             <p>COPYRIGHT (©) 2018 HealthTrace</p>
         </div>
